Template manager support clone templates and add tasks directly from summary table

--- a/template-manager-ui/.env
+++ b/template-manager-ui/.env
@@ -10,6 +10,6 @@ REACT_APP_TEMPLATE_MANAGER_NAME=Template Manager
 REACT_APP_ACTION_MANAGER_NAME=Action Manager
 REACT_APP_ECOMMERCE_MANAGER_NAME=Ecommerce Manager
 REACT_APP_ENDPOINT_MANAGER_NAME=Endpoint Manager
-REACT_APP_PAGES=[{\"name\":\"templates\",\"link\":\"/templates\",\"uiName\":\"Templates\"},{\"name\":\"tasks\",\"link\":\"/tasks\",\"uiName\":\"Tasks\"}]
+REACT_APP_PAGES=[{\"name\":\"templates\",\"link\":\"/templates\",\"uiName\":\"Templates\"},{\"name\":\"reports\",\"link\":\"/tasks\",\"uiName\":\"Reports\"}]
 REACT_APP_NAME=Template Manager
 REACT_APP_ICON=template-manager.jps
