--- a/.github/workflows/notify-parent-ci.yaml
+++ b/.github/workflows/notify-parent-ci.yaml
@@ -1,3 +1,4 @@
+
 name: send-submodule-updates-to-parent-repo-ci
 
 on:
@@ -6,7 +7,7 @@ on:
       - main
 
 jobs:
-  update:
+  Update:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,7 +25,23 @@ jobs:
       - name: Commit
         run: |
           git config user.email "tranvanhoactk34@gmail.com"
-          git config user.name "GitHub Actions - update template-management-app submodule"
+          git config user.name "GitHub Actions - update template-manager-app submodule"
           git add --all
-          git commit -m "Update template-management-app submodules" || echo "No changes to commit"
+          git commit -m "Update template-manager-app submodules" || echo "No changes to commit"
           git push
+      - name: Github REST API Call to make template-manager-backend-ci service build
+        env:
+          CI_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          PARENT_REPO: project-management
+          PARENT_BRANCH: main
+          WORKFLOW_ID: template-manager-backend-ci.yaml
+        run: |
+          curl -fL --retry 3 -X POST -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ env.CI_TOKEN }}" https://api.github.com/repos/hvantran/${{ env.PARENT_REPO }}/actions/workflows/${{ env.WORKFLOW_ID }}/dispatches -d '{"ref":"${{ env.PARENT_BRANCH }}"}'
+      - name: Github REST API Call to make template-manager-ui-ci service build
+        env:
+          CI_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          PARENT_REPO: project-management
+          PARENT_BRANCH: main
+          WORKFLOW_ID: template-manager-ui-ci.yaml
+        run: |
+          curl -fL --retry 3 -X POST -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ env.CI_TOKEN }}" https://api.github.com/repos/hvantran/${{ env.PARENT_REPO }}/actions/workflows/${{ env.WORKFLOW_ID }}/dispatches -d '{"ref":"${{ env.PARENT_BRANCH }}"}'
