Update submodule ci yaml

--- a/.github/workflows/notify-parent-ci.yaml
+++ b/.github/workflows/notify-parent-ci.yaml
@@ -28,22 +28,11 @@ jobs:
           git config user.name "GitHub Actions - update template-manager-app submodule"
           git add --all
           git commit -m "Update template-manager-app submodules" || echo "No changes to commit"
-          git push
-      - name: Git pull rebase and push
-        if: failure()
-        run: |
-          git pull --rebase
-          git push
-      - name: Git pull rebase and push 2
-        if: failure()
-        run: |
-          git pull --rebase
-          git push
-      - name: Git pull rebase and push 3
-        if: failure()
-        run: |
-          git pull --rebase
-          git push
+      - uses: nick-fields/retry@v2
+        with:
+          timeout_seconds: 15
+          max_attempts: 5
+          command: git pull --rebase && git push
       - name: Github REST API Call to make template-manager-backend-ci service build
         env:
           CI_TOKEN: ${{ secrets.ACCESS_TOKEN }}
