hvantran/project-management#76 Support docker image base on java 21 and update APM version

--- a/template-manager-backend/pom.xml
+++ b/template-manager-backend/pom.xml
@@ -103,7 +103,17 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>*.jar</exclude>
+                </excludes>
                 <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>*.jar</include>
+                </includes>
+                <targetPath>${project.build.directory}</targetPath>
             </resource>
             <resource>
                 <directory>src/main/docker</directory>
