hvantran/project-management#108 Migrate job manager to use elasticsearch instead of postgres

--- a/template-manager-backend/src/main/resources/application-dev.properties
+++ b/template-manager-backend/src/main/resources/application-dev.properties
@@ -5,7 +5,6 @@ spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/${template.manager.service.name}
 server.port=8084
 
-# Database settings
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/template_management_app
-spring.datasource.username=postgres_user
-spring.datasource.password=postgres_password
+spring.elasticsearch.rest.uri=localhost:9200
+spring.elasticsearch.rest.password=gkkxoMFJC060lYDUNgk5
+spring.elasticsearch.rest.username=elastic
