--- a/template-manager-backend/src/main/resources/application-stage.properties
+++ b/template-manager-backend/src/main/resources/application-stage.properties
@@ -6,6 +6,6 @@ server.servlet.context-path=/${template.manager.service.name}
 server.port=8084
 
 # Database settings
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.elasticsearch.rest.uri=${ELASTICSEARCH_URL}
+spring.elasticsearch.rest.password=${ELASTICSEARCH_PASSWORD}
+spring.elasticsearch.rest.username=${ELASTICSEARCH_USERNAME}
