hvantran/project-management#108 Migrate to use elasticsearch instead of postgres for searching

--- a/template-manager-backend/src/main/resources/application-prod.properties
+++ b/template-manager-backend/src/main/resources/application-prod.properties
@@ -6,6 +6,6 @@ server.servlet.context-path=/${template.manager.service.name}
 server.port=8084
 
 # Database settings
-spring.elasticsearch.rest.uri=${ELASTICSEARCH_URL}
-spring.elasticsearch.rest.password=${ELASTICSEARCH_PASSWORD}
-spring.elasticsearch.rest.username=${ELASTICSEARCH_USERNAME}
+spring.elasticsearch.rest.uri=${ELASTIC_URL}
+spring.elasticsearch.rest.password=${ELASTIC_PASSWORD}
+spring.elasticsearch.rest.username=${ELASTIC_USERNAME}
