hvantran/project-management#116 Create action missing content templates

--- a/template-manager-ui/.env
+++ b/template-manager-ui/.env
@@ -12,4 +12,4 @@ REACT_APP_ECOMMERCE_MANAGER_NAME=Ecommerce Manager
 REACT_APP_ENDPOINT_MANAGER_NAME=Endpoint Manager
 REACT_APP_PAGES=[{\"name\":\"templates\",\"link\":\"/templates\",\"uiName\":\"Templates\"},{\"name\":\"reports\",\"link\":\"/tasks\",\"uiName\":\"Reports\"}]
 REACT_APP_NAME=Template Manager
-REACT_APP_ICON=template-manager.jps
+REACT_APP_ICON=template-manager.jpg
