--- a/template-manager-ui/package.json
+++ b/template-manager-ui/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@mui/styles": "^5.15.16",
+    "@mui/x-charts": "^7.20.0",
     "@mui/x-data-grid": "^6.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
