hvantran/project-management#138 Update app switcher

--- a/template-manager-ui/.env
+++ b/template-manager-ui/.env
@@ -9,7 +9,7 @@ REACT_APP_ENDPOINT_MANAGER_FRONTEND_URL=http://extendpointui.local:6086
 REACT_APP_TEMPLATE_MANAGER_NAME=Template Manager
 REACT_APP_ACTION_MANAGER_NAME=Action Manager
 REACT_APP_ECOMMERCE_MANAGER_NAME=Ecommerce Manager
-REACT_APP_ENDPOINT_MANAGER_NAME=Endpoint Manager
+REACT_APP_ENDPOINT_MANAGER_NAME=Data Collector
 REACT_APP_PAGES=[{\"name\":\"templates\",\"link\":\"/templates\",\"uiName\":\"Templates\"},{\"name\":\"reports\",\"link\":\"/tasks\",\"uiName\":\"Reports\"}]
 REACT_APP_NAME=Template Manager
-REACT_APP_ICON=template-manager.jpg
+REACT_APP_ICON=template-manager.png
