hvantran/project-management#154 Use mongodb instead of Elasticsearch

--- a/template-manager-backend/src/main/resources/application-dev.properties
+++ b/template-manager-backend/src/main/resources/application-dev.properties
@@ -1,10 +1,7 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
 # Setting Spring context path & port
 server.servlet.context-path=/${template.manager.service.name}
 server.port=8084
 
-spring.elasticsearch.rest.uri=localhost:9200
-spring.elasticsearch.rest.password=gkkxoMFJC060lYDUNgk5
-spring.elasticsearch.rest.username=elastic
+# MongoDB settings
+spring.data.mongodb.uri=mongodb://localhost:27017/template-manager?directConnection=true&serverSelectionTimeoutMS=2000
+spring.main.allow-bean-definition-overriding=true
