--- a/template-manager-backend/src/main/resources/application-prod.properties
+++ b/template-manager-backend/src/main/resources/application-prod.properties
@@ -1,11 +1,7 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
 # Setting Spring context path & port
 server.servlet.context-path=/${template.manager.service.name}
 server.port=8084
 
 # Database settings
-spring.elasticsearch.rest.uri=${ELASTIC_URL}
-spring.elasticsearch.rest.password=${ELASTIC_PASSWORD}
-spring.elasticsearch.rest.username=${ELASTIC_USERNAME}
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.main.allow-bean-definition-overriding=true
