--- a/template-manager-backend/src/main/resources/application.properties
+++ b/template-manager-backend/src/main/resources/application.properties
@@ -18,5 +18,5 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.packagesToScan=com.hoatv.template.management
 
 management.metrics.tags.application=${template.manager.service.name}
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=*
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://example.com/.well-known/jwks.json
