--- a/template-manager-backend/src/main/resources/application-stage.properties
+++ b/template-manager-backend/src/main/resources/application-stage.properties
@@ -3,5 +3,5 @@ server.servlet.context-path=/${template.manager.service.name}
 server.port=8084
 
 # Database settings
-spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.uri=${DB_URL}
 spring.main.allow-bean-definition-overriding=true
